sm/labs/traffic-mesh/new-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-beta
labels:
  app: frontend
  version: beta
spec:
  selector:
    matchLabels:
      app: frontend
      version: beta
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        version: beta
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: frontend
          image: quay.io/redhattraining/ossm-frontend:beta
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
            protocol: TCP
