sm/labs/traffic-mesh/dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend-destination-rule
  namespace: traffic-mesh
spec:
  host: frontend
  subsets:
  - labels:
      version: beta
    name: beta
  - labels:
      version: v2
    name: v2
